Table is working pretty well, requests are kinda organized now
